# whole-foods-mcp

./: .gitignore  .mcp.json  .mcpbignore  CLAUDE.md  README.md  manifest.json  pyproject.toml  server.py  whole-foods-mcp.mcpb
.claude/skills/grocery-order/: SKILL.md
js/: add_to_cart.js  clear_cart_click.js  clear_cart_confirm.js  clear_cart_find_button.js  product_details.js  search.js  view_cart.js
tests/: conftest.py  test_add_to_cart.py  test_cart_management.py  test_product_details.py  test_search.py
